@@ -211,7 +211,7 @@ z80MightRead(const lineNode *pl, const char *what)
   if(strcmp(pl->line, "call\t__initrleblock") == 0)
     return TRUE;
 
-  if(strcmp(pl->line, "call\t__sdcc_call_hl") == 0 && (strchr(what, 'h') != 0 || strchr(what, 'l') != 0))
+  if(strcmp(pl->line, "call\t___sdcc_call_hl") == 0 && (strchr(what, 'h') != 0 || strchr(what, 'l') != 0))
     return TRUE;
 
   if(strncmp(pl->line, "call\t", 5) == 0 && strchr(pl->line, ',') == 0)
